rh/client/scss/components/_card.scss
//
// Cards
//
// To be used with .card-grid
//
// Markup: components/card.hbs
//
// .light       - Light version
// .dark        - Dark version
// .has-img     - Photo Card
// .minimal     - With a boxed icon
//
// Style guide: Components.card
//

.card {
  padding: 1.25rem;
}

.card > a {
  text-decoration: none;
}

.card-header {
  display: flex;
  align-items: center;
}

.card-header .icon {
  margin-right: $global-margin * 1.5;
  padding: 4px;
  width: 44px;
  height: 44px;
}

.card-title {
  font-size: 1.3rem;
}

.card-title > a {
  text-decoration: none;
}

.card-subtitle {
  font-family: $header-font-family;
  text-transform: uppercase;
}

.card-header .icon + .card-title {
  margin-bottom: 0;
}

.card-content {
  margin-top: $global-margin;
  @include bottomless;
  font-size: .9rem;
}

.card-actions {
  margin-top: $global-margin;

  * {
    margin-bottom: 0;
  }
}

// Image/Photo Card
.card.has-img {
  padding: 0 0 $global-margin;

  .card-header {
    flex-direction: column;
    align-items: flex-start;
  }

  .card-img {
    order: 0;
    margin-bottom: $global-margin;
  }

  .card-content,
  .card-actions,
  .card-title,
  .card-subtitle {
    padding: 0 1.25rem;
  }

  .card-title {
    margin-bottom: 0;
    font-weight: 600;
    color: $color-navy-light;
  }

  .card-subtitle {
    margin-bottom: $global-margin / 2;
    font-size: 0.8rem;
    font-weight: 600;
    color: $color-navy;
  }

  .card-content {
    color: $color-navy;
  }

  .card-content span {
    font-size: 0.75rem;
  }

  .card-actions {
    margin-top: $global-margin;
  }
}

// Minimal Icon Card
.card.minimal {
  background-color: $white;

  .icon {
    padding: 10px;
    width: 60px;
    height: 60px;
    background-color: $color-yellow;
  }
}

// Card Themes
.card.light {
  background: $color-yellow;
}

.card.dark {
  background: $color-beige;
}

.card.light,
.card.dark {
  > a,
  .card-content {
    color: $color-navy;
  }

  .card-title,
  .card-title > a {
    color: $color-navy-light;
  }

  .icon {
    color: $color-pink;
  }
}

